RESOLVED FIXED277642
[WebGPU] Validation error when instanceCount overflows
https://bugs.webkit.org/show_bug.cgi?id=277642
Summary [WebGPU] Validation error when instanceCount overflows
Mike Wyrzykowski
Reported 2024-08-05 10:48:06 PDT
[WebGPU] Validation error when instanceCount overflows
Attachments
Mike Wyrzykowski
Comment 1 2024-08-05 10:48:17 PDT
Mike Wyrzykowski
Comment 2 2024-08-05 11:07:24 PDT
EWS
Comment 3 2024-08-05 15:15:52 PDT
Committed 281854@main (0a1091a6b866): <https://commits.webkit.org/281854@main> Reviewed commits have been landed. Closing PR #31731 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.