[WebGPU] Validation error when instanceCount overflows https://bugs.webkit.org/show_bug.cgi?id=277642 rdar://133222357

Reviewed by Tadeu Zagallo.

Validation layer crashes when counts exceed UINT32_MAX.

* LayoutTests/fast/webgpu/nocrash/fuzz-277642-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-277642.html: Added.
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::draw):

Canonical link: https://commits.webkit.org/281854@main